<resources>
    <string name="app_name">EEE Formula</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EEE Formula</string>
    <string name="nav_header_subtitle">eee.videotutorial@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Practice</string>
    <string name="menu_slideshow">BD JOB PORTAL</string>
    <string name="menu_tools">Privacy Policy</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    //section name
    <string name="Sec1">Basic Electrical Engineering</string>
    <string name="Sec2">Electrical Machines</string>
    <string name="Sec3">Power System</string>
    <string name="Sec4">Basic Electronics</string>
    <string name="Sec5">EEE Math Collection</string>
    <string name="Sec6">EEE Math For Job</string>
    <string name="Sec7">Extras</string>

<!--    facebook add-->
    <string name="facebook_banner_add">1148381112218446_1148396125550278</string>
    <string name="facebook_rectangle_add">1148381112218446_1148471008876123</string>
    <string name="about">About US</string>
    <string name="memorize">Memorize</string>

<!--    basicEE, elecMachines, powerSys, basicElec, eeeMathCollection,-->
<!--    eeeMathCollection, eeeJobMath, extraNote
        eeeJob, bankJob
-->
    <string name="basicEE">Basic Electrical Engineering</string>
    <string name="elecMachines">Electrical Machines</string>
    <string name="powerSys">Power System</string>
    <string name="basicElec">Basic Electronics</string>
    <string name="eeeMathCollection">EEE Math</string>
    <string name="eeeJobMath">Math for Job</string>
    <string name="extraNote">Extra Section</string>
    <string name="right">RIGHT!</string>
    <string name="mcq">MCQ</string>
    <string name="primary">Primary</string>
    <string name="learning">Learning</string>
    <string name="master">Master</string>
    <string name="wrong">WRONG!</string>


</resources>
