<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.saifeeeformula.saif_win10.saifdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_formulaView"
            app:destination="@id/formulaView" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.saifeeeformula.saif_win10.saifdrawer.ui.practice.PracticeFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.saifeeeformula.saif_win10.saifdrawer.ui.jobportal.JobPortalFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_formulaView"
            app:destination="@id/formulaView" />
    </fragment>

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.saifeeeformula.saif_win10.saifdrawer.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.saifeeeformula.saif_win10.saifdrawer.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.saifeeeformula.saif_win10.saifdrawer.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/formulaView"
        android:name="com.saifeeeformula.saif_win10.saifdrawer.FormulaView"
        android:label="Formula"
        tools:layout="@layout/formula_view_fragment">
        <action
            android:id="@+id/action_formulaView_to_fragmentImgView"
            app:destination="@id/fragmentImgView" />
    </fragment>
    <fragment
        android:id="@+id/fragmentImgView"
        android:name="com.saifeeeformula.saif_win10.saifdrawer.FragmentImgView"
        android:label="Formula"
        tools:layout="@layout/fragment_img_view_fragment"/>
</navigation>